<resources>
    <string name="app_name">MyPet</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-6229697190551796/4776782710</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="facebook_app_id" translatable="false">522599922195409</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb522599922195409</string>
    <string name="recyclerview" translatable="false">RecyclerView</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="desc_img_animal">Imagen del animal</string>
    <string name="nombre_animal">Nombre</string>
    <string name="raza_animal">Raza/Especie</string>
    <string name="tipo_animal">Tipo</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="pssword">Contraseña</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="pregunta">¿No tienes cuenta?</string>
    <string name="regristrate">REGISTRATE AQUÍ</string>
    <string name="google">Iniciar con Google</string>
    <string name="ic_email" translatable="false">ic_email</string>
    <string name="ic_candado" translatable="false">ic_candado</string>
    <string name="registro">REGISTRO</string>
    <string name="ic_person" translatable="false">ic_person</string>
    <string name="logo" translatable="false">logo</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="confir_password">Confirmar Contraseña</string>
    <string name="registrase">REGISTRASE</string>
    <string name="ic_person_2" translatable="false">ic_person_2</string>
    <string name="password_corta">La contraseña es demasiado corta</string>
    <string name="password_diferente">La contraseña no coincide</string>
    <string name="email_no_valido">El email no es válido</string>
    <string name="campos_vacios">Rellena todos los campos</string>
    <string name="register_complete">Usuario Registrado</string>
    <string name="register_incomplete">No se pudo registrar</string>
    <string name="inicio_correcto">Se ha iniciado sesión</string>
    <string name="inicio_incorrecto">El email o contraseña incorrectos</string>
    <string name="inicio_incorrecto_google">Sesión no iniciada con google</string>
    <string name="cargando_iniciar">Iniciando sesión…</string>
    <string name="cargando_registro">Creando usuario…</string>
    <string name="inicio">Inicio</string>
    <string name="favoritos">Favoritos</string>
    <string name="publicar">Publicar</string>
    <string name="mensajes">Mensajes</string>
    <string name="perfil">Perfil</string>
    <string name="boton_publicar" translatable="false">boton_publicar</string>
    <string name="nueva_mascota">Nueva mascota</string>
    <string name="edad_animal">Edad</string>
    <string name="descripcion">Descripción</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="publicar_anuncio">Publicar anuncio</string>
    <string name="subir_imagen_correcta">Imagen subida</string>
    <string name="error_subir_imagen">No se ha podido subir la imagen</string>
    <string name="desc_masculino" translatable="false">masculino</string>
    <string name="desc_femenino" translatable="false">femenino</string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galería</string>
    <string name="permisos">Debes habilitar los permisos de cámara</string>
    <string name="borrar_imagen">Borrar imagen</string>
    <string name="animal_publicado">Se ha publicado el anuncio</string>
    <string name="error_animal_publicado">No se ha publicado el anuncio</string>
    <string name="subiendo_publicacion">Subiendo anuncio...</string>
    <string name="elegirimagen" translatable="false">elegirImagen</string>
    <string name="configuration">Configuración</string>
    <string name="publicaciones">Publicaciones:</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="signOut">Cerrar Sesión</string>
    <string name="sesion_cerrada">Se ha cerrado la sesión</string>
    <string name="ubication">Ubicación</string>
    <string name="actualizando_perfil">Actualizando Perfil…</string>
    <string name="perfil_actualizado">Perfil Actualizado</string>
    <string name="perfil_no_actualizado">El perfil no se ha actualizado</string>

    <string-array name="lista_animales">
        <item>Perro</item>
        <item>Gato</item>
        <item>Conejo</item>
        <item>Roedor</item>
        <item>Tortuga</item>
        <item>Pez</item>
        <item>Pájaro</item>
        <item>Reptil</item>
    </string-array>
    <string name="title_activity_ubicacion">Map</string>
    <string name="mapa">Mapa</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="guardar_ubicacion">Guardar ubicación</string>
    <string name="guardar_marca">Guardar Marca</string>
    <string name="actualizar_perfil">Actualizar perfil</string>
    <string name="ver_perfil">Ver perfil</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="sin_ubicacion_seleccionada">Sin ubicación seleccionada</string>
    <string name="ocultar_ubicacion">Ocultar Ubicación</string>
    <string name="boton_me_gusta_desc" translatable="false">boton me gusta</string>
    <string name="hace_un_momento">Hace un momento</string>
    <string name="hace_una_hora">Hace una hora</string>
    <string name="hace_un_minuto">Hace un minuto</string>
    <string name="ayer">Ayer</string>
    <string name="hace_unos_minutos">Hace %d minutos</string>
    <string name="hace_unas_horas">Hace %d horas</string>
    <string name="hace_unos_dias">Hace %d días</string>
    <string name="tiempo">Tiempo</string>
    <string name="reportar">Reportar Publicación</string>
    <string name="eliminar">Eliminar Publicación</string>
    <string name="publicacion_eliminada">Publicación eliminada</string>
    <string name="comprobar_eliminar">¿Desea eliminar la publicación?</string>
    <string name="comprobar_eliminar_usuario" translatable="false">¿Estás seguro?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="busqueda">Buscar Animal</string>
    <string name="ultimo_mensaje">Último mensaje</string>
    <string name="usuario">Usuario</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="nuevo_mensaje">Nuevo Mensaje</string>
    <string name="fecha">Fecha</string>
    <string name="online">En línea</string>
    <string name="mensaje_nuevo">Mensaje nuevo</string>
    <string name="no_iniciado_sesion">No has iniciado sesión</string>
    <string name="sin_mensajes">No tienes mensajes</string>
    <string name="sin_favoritos">No tienes ninguna mascota en favorito</string>
    <string name="no_encontrado">Vaya! No encontramos lo que buscas</string>
    <string name="mensaje_chat_info">Este es el comienzo de un bonito hogar para la mascota</string>
    <string name="sin_publicaciones">No hay publicaciones</string>
    <string name="sobre_nosotros">Sobre nosotros</string>
    <string name="sin_ubicacion">Sin ubicación</string>
    <string name="informacion_app">Esta aplicación se realizó de forma altruista para poder dar un hogar a las mascotas que más lo necesitan. Para ello se podrá publicar anuncios de animales que estén en adopción y poder contactar con el usuario y así darle un hogar al animal. Queremos que este animal tenga un buen hogar así que pedimos por favor si estás pensando en adoptar un animal hazlo con cabeza y que no sea un capricho.
    </string>
    <string name="contactar">Contacta con nosotros</string>
    <string name="enviar_mail">Enviar email</string>
    <string name="asunto" translatable="false">INCIDENCIA-MYPET</string>
    <string name="comprobar_reportar">¿Estás seguro de reportar esta publicación?</string>
    <string name="report_confirm">Se ha reportado la publicación</string>
    <string name="precauciones">Cuidado, estas son unas recomendaciones a seguir para la seguridad de todos:</string>
    <string name="precaucion1">No aporte datos bancarios a ninguna persona.</string>
    <string name="precaucion2">La compra/venta de animales está prohibida.</string>
    <string name="precaucion3">No acepte intercambios por otros animales u objetos.</string>
    <string name="precaucion4">A la hora de entregar la mascota, se recomienda quedar en un lugar concurrido.</string>
    <string name="colocar_marcador">Coloca un marcador</string>
    <string name="publicacion_actualizada">Publicacion Actualizada</string>
    <string name="actualizar_publicacion">Actualizar Publicacion</string>
    <string name="actualizar">Actualizar</string>
    <string name="recomendacion">Recomendamos editar el perfil</string>
    <string name="despues">Después</string>
    <string name="editar">Editar</string>
    <string name="facebook">Facebook</string>
    <string name="confirmacion_eliminar">¿Estás seguro que quieres eliminar tu perfil?, se perderá los siguientes datos:</string>
    <string name="publicaciones_aviso">Publicaciones</string>
    <string name="eliminar_usuario">Eliminar Usuario</string>
    <string name="no_internet">Vaya, parece que no tienes conexión a internet</string>
    <string name="reconectar">Reconectar</string>


    <string-array name="lista_reportes">
        <item>Broma</item>
        <item>Venta animal</item>
        <item>Contenido ofensivo</item>
        <item>Anuncio Duplicado</item>
        <item>Publicidad o Spam</item>
    </string-array>
</resources>