<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/my_snackbar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/fondoSnackBar"
    android:padding="15dp">

    <TextView
        android:theme="@style/colorDeTexto"
        android:id="@+id/message_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".6"
        android:gravity="center_vertical"
        android:text="@string/recomendacion"/>

    <TextView
        android:id="@+id/first_text_view"
        android:theme="@style/colorTextoBotonesSnackBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="center"
        android:text="@string/despues"/>

    <TextView
        android:id="@+id/second_text_view"
        android:theme="@style/colorTextoBotonesSnackBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="center"
        android:text="@string/editar"/>



</LinearLayout>