<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen_animal"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/desc_img_animal"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_animal"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tipo_animal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_animal"
                android:layout_marginTop="5dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/raza_animal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/raza_animal"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/sexo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="2dp"
                    android:contentDescription="@string/desc_img_animal"
                    android:src="@mipmap/ic_launcher" />

                <TextView

                    android:id="@+id/edad_animal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/edad_animal"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>