<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_margin="10dp"
            android:id="@+id/imagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@string/desc_img_animal"
            tools:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_animal"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tipo_animal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_animal"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/raza_animal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raza_animal"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/sexo"
                    android:layout_width="34dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:contentDescription="@string/desc_img_animal"
                    tools:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/edad_animal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/raza_animal"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="11dp"/>

</LinearLayout>