<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/layout_registro"
    tools:context=".activities.sesion.RegistroActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.github.florent37.shapeofview.shapes.ArcView
                android:id="@+id/arcView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:elevation="4dp"
                app:shape_arc_cropDirection="outside"
                app:shape_arc_height="20dp"
                app:shape_arc_position="bottom">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/principal_app" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/ic_person"
                    android:contentDescription="@string/ic_person" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:text="@string/registro"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </com.github.florent37.shapeofview.shapes.ArcView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_person_2"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/ic_person_2" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/estiloCampoDeTexto"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/campo_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre_de_usuario"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_email"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/ic_email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/estiloCampoDeTexto"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/campo_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/correo_electronico"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_candado"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/ic_candado" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/estiloCampoDeTexto"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/campo_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pssword"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_candado"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/ic_candado" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/estiloCampoDeTexto"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/campo_confirmar_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confir_password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/boton_registro"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:background="@drawable/pulsar_boton_app"

        android:onClick="registrarUsuario"
        android:text="@string/registrase"
        android:textColor="@color/white" />

    <ImageButton
        android:id="@+id/boton_atras_registro"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:onClick="irAtras"
        android:background="@drawable/pulsar_publicar"
        android:src="@drawable/ic_flecha_atras_blanca"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>